--- a/public/special.html
+++ b/public/special.html
@@ -269,6 +269,13 @@
                                 <!-- 학생 목록이 여기에 표시됩니다. -->
                             </div>
                             <div id="iep-modify-section" class="mt-6 hidden">
+                                <div id="iep-save-section" class="mb-4 hidden">
+                                    <h4 class="font-semibold mb-2">저장 테이블</h4>
+                                    <div class="flex flex-wrap gap-2">
+                                        <button id="save-iep-btn" class="flex-1 min-w-[140px] bg-sky-600 hover:bg-sky-700 text-white text-sm font-semibold px-3 py-2 rounded transition">저장</button>
+                                        <button id="save-pdf-btn" class="flex-1 min-w-[140px] bg-gray-500 hover:bg-gray-600 text-white text-sm font-semibold px-3 py-2 rounded transition">PDF 저장</button>
+                                    </div>
+                                </div>
                                 <div id="iep-generation-section" class="mb-4 hidden">
                                     <h4 class="font-semibold mb-2">생성 테이블</h4>
                                     <div class="flex flex-wrap gap-2">
@@ -988,10 +995,13 @@
         const modifyBtn = document.getElementById('iep-modify-btn');
         const modifyTargetsContainer = document.getElementById('iep-modify-targets');
         const generationSection = document.getElementById('iep-generation-section');
+        const saveSection = document.getElementById('iep-save-section');
         const manualEditBtn = document.getElementById('iep-manual-edit-btn');
         const achievementButton = document.getElementById('iep-achievement-btn');
         const generateSemesterBtn = document.getElementById('generate-semester-goals-btn');
         const generateMonthlyBtn = document.getElementById('generate-monthly-plan-btn');
+        const saveIepButton = document.getElementById('save-iep-btn');
+        const savePdfButton = document.getElementById('save-pdf-btn');
         let currentModifyTarget = 'page-1';
         let manualEditMode = false;
         let manualEditNode = null;
@@ -1174,6 +1184,27 @@
             await generateMonthlyPlans(lastKoreanList, lastMathList);
         });
 
+        saveIepButton?.addEventListener('click', async () => {
+            if (manualEditMode) {
+                alert('수동 편집을 완료한 후 저장해 주세요.');
+                return;
+            }
+            try {
+                await handleIepSave();
+            } catch (error) {
+                console.error('IEP 저장 중 오류:', error);
+                alert('IEP 저장 중 오류가 발생했습니다.');
+            }
+        });
+
+        savePdfButton?.addEventListener('click', () => {
+            if (manualEditMode) {
+                alert('수동 편집을 완료한 후 PDF를 저장해 주세요.');
+                return;
+            }
+            saveIepPdf().catch(err => console.error('PDF 저장 실패', err));
+        });
+
         async function loadIepStudents() {
             const user = auth.currentUser;
             if (!user || isLoadingIepStudents) return;
@@ -1217,6 +1248,7 @@
         function showModifySection() {
             const section = document.getElementById('iep-modify-section');
             section?.classList.remove('hidden');
+            saveSection?.classList.remove('hidden');
             generationSection?.classList.remove('hidden');
             renderModifyTargetButtons();
             updateModifyTargetActiveState();
@@ -1225,6 +1257,7 @@
         function hideModifySection() {
             const section = document.getElementById('iep-modify-section');
             section?.classList.add('hidden');
+            saveSection?.classList.add('hidden');
             generationSection?.classList.add('hidden');
             generateMonthlyBtn?.classList.add('hidden');
             exitManualEditMode(true);
@@ -1413,8 +1446,6 @@
                 <div class="iep-pages-wrapper">
                     <div class="iep-cover-actions" id="iep-cover-actions">
                         <button id="edit-iep-title" class="text-sm text-sky-600">편집</button>
-                        <button id="save-iep-btn" class="bg-sky-600 hover:bg-sky-700 text-white text-sm px-3 py-1 rounded">저장</button>
-                        <button id="save-pdf-btn" class="bg-gray-500 hover:bg-gray-600 text-white text-sm px-3 py-1 rounded">PDF 저장</button>
                     </div>
                     <div id="iep-content" class="iep-page-collection">
                         <section class="iep-page iep-page-cover" data-page="1">
@@ -1468,79 +1499,88 @@
                     editBtn.textContent = '편집';
                 }
             });
-            document.getElementById('save-iep-btn').addEventListener('click', async () => {
-                const user = auth.currentUser;
-                if (!user) return;
-                const docRef = doc(db, 'users', user.uid, 'ieps', id);
-                const title = document.getElementById('iep-title').textContent.trim();
-                const contentNode = document.getElementById('iep-content');
-                const contentClone = contentNode.cloneNode(true);
-                const coverPage = contentClone.querySelector('.iep-page-cover');
-                if (coverPage) {
-                    coverPage.parentNode.removeChild(coverPage);
-                }
-                const content = contentClone.innerHTML;
-                await updateDoc(docRef, { title, content });
-                showIepList(studentName);
-                openIepDocument(id, studentName);
-                alert('저장되었습니다.');
-            });
-            document.getElementById('save-pdf-btn')?.addEventListener('click', () => {
-                saveIepPdf().catch(err => console.error('PDF 저장 실패', err));
-            });
         }
 
-    async function saveIepPdf() {
-        const contentNode = document.getElementById('iep-content');
-        if (!contentNode) {
-            console.error('IEP 콘텐츠 노드를 찾을 수 없습니다.');
-            return;
+        async function handleIepSave() {
+            const docId = currentIepDocId;
+            const studentName = currentIepStudent;
+            if (!docId || !studentName) {
+                alert('저장할 IEP가 없습니다.');
+                return;
+            }
+            const user = auth.currentUser;
+            if (!user) return;
+            const titleNode = document.getElementById('iep-title');
+            const contentNode = document.getElementById('iep-content');
+            if (!titleNode || !contentNode) {
+                alert('저장할 내용이 없습니다.');
+                return;
+            }
+            const docRef = doc(db, 'users', user.uid, 'ieps', docId);
+            const title = titleNode.textContent.trim();
+            const contentClone = contentNode.cloneNode(true);
+            const coverPage = contentClone.querySelector('.iep-page-cover');
+            if (coverPage) {
+                coverPage.parentNode.removeChild(coverPage);
+            }
+            const content = contentClone.innerHTML;
+            await updateDoc(docRef, { title, content });
+            showIepList(studentName);
+            openIepDocument(docId, studentName);
+            alert('저장되었습니다.');
         }
 
-        // --- UI 요소 준비 ---
-        const saveBtn = document.getElementById('save-pdf-btn');
-        const actionsContainer = document.getElementById('iep-cover-actions');
-        const originalBtnText = saveBtn?.textContent;
-        const titleText = document.getElementById('iep-title')?.textContent.trim() || '개별화교육계획';
-        const filename = `${sanitizeFileName(titleText)}.pdf`;
-        const pages = contentNode.querySelectorAll('.iep-page');
+        async function saveIepPdf() {
+            const contentNode = document.getElementById('iep-content');
+            if (!contentNode) {
+                console.error('IEP 콘텐츠 노드를 찾을 수 없습니다.');
+                return;
+            }
 
-        // --- PDF 생성 전 처리 ---
-        if (saveBtn) {
-            saveBtn.disabled = true;
-            saveBtn.textContent = '저장 중...';
-        }
-        // 버튼 숨기기 및 그림자 제거 (PDF에 불필요한 요소 제거)
-        if (actionsContainer) actionsContainer.style.display = 'none';
-        pages.forEach(page => (page.style.boxShadow = 'none'));
+            // --- UI 요소 준비 ---
+            const saveBtn = document.getElementById('save-pdf-btn');
+            const actionsContainer = document.getElementById('iep-cover-actions');
+            const originalBtnText = saveBtn?.textContent;
+            const titleText = document.getElementById('iep-title')?.textContent.trim() || '개별화교육계획';
+            const filename = `${sanitizeFileName(titleText)}.pdf`;
+            const pages = contentNode.querySelectorAll('.iep-page');
 
-        // --- html2pdf 옵션 설정 ---
-        const opt = {
-            margin: 0,
-            filename: filename,
-            image: { type: 'jpeg', quality: 0.98 },
-            html2canvas: { scale: 2, useCORS: true, scrollY: -window.scrollY },
-            jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
-        };
-
-        // --- PDF 생성 및 저장 ---
-        try {
-            await html2pdf().from(contentNode).set(opt).save();
-            showToast('PDF 저장이 완료되었습니다.');
-        } catch (error) {
-            console.error('PDF 저장 중 오류:', error);
-            showToast('PDF 저장 중 오류가 발생했습니다.');
-        } finally {
-            // --- PDF 생성 후 처리 (숨겼던 요소 복원) ---
-            if (actionsContainer) actionsContainer.style.display = 'flex';
-            pages.forEach(page => (page.style.boxShadow = '')); // 원래 스타일로 복원
-
+            // --- PDF 생성 전 처리 ---
             if (saveBtn) {
-                saveBtn.disabled = false;
-                saveBtn.textContent = originalBtnText;
+                saveBtn.disabled = true;
+                saveBtn.textContent = '저장 중...';
+            }
+            // 버튼 숨기기 및 그림자 제거 (PDF에 불필요한 요소 제거)
+            if (actionsContainer) actionsContainer.style.display = 'none';
+            pages.forEach(page => (page.style.boxShadow = 'none'));
+
+            // --- html2pdf 옵션 설정 ---
+            const opt = {
+                margin: 0,
+                filename: filename,
+                image: { type: 'jpeg', quality: 0.98 },
+                html2canvas: { scale: 2, useCORS: true, scrollY: -window.scrollY },
+                jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
+            };
+
+            // --- PDF 생성 및 저장 ---
+            try {
+                await html2pdf().from(contentNode).set(opt).save();
+                showToast('PDF 저장이 완료되었습니다.');
+            } catch (error) {
+                console.error('PDF 저장 중 오류:', error);
+                showToast('PDF 저장 중 오류가 발생했습니다.');
+            } finally {
+                // --- PDF 생성 후 처리 (숨겼던 요소 복원) ---
+                if (actionsContainer) actionsContainer.style.display = 'flex';
+                pages.forEach(page => (page.style.boxShadow = '')); // 원래 스타일로 복원
+
+                if (saveBtn) {
+                    saveBtn.disabled = false;
+                    saveBtn.textContent = originalBtnText;
+                }
             }
         }
-    }
 
         async function applyModification() {
             const instruction = modifyInput.value.trim();
